--- a/css/style.css
+++ b/css/style.css
@@ -339,10 +339,10 @@ body {
 }
 
 .slideshow.small img {
-  position: absolute;   /* <== KEY line to make images overlap */
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  position: absolute !important;
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover !important;
   top: 0;
   left: 0;
   opacity: 0;
